<resources>
    <string name="app_name">InterAndroid</string>
    <string name="telaCadastro">"Cadastro de Clientes"</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="Login">Login</string>
    <string name="LoginFace">Login com o Facebook</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Produzido">Desenvolvido por Jean Pierre e José Renato</string>
    <string name="PNome">Primeiro Nome</string>
    <string name="SNome">Sobrenome</string>
    <string name="CEP">CEP</string>
    <string name="Endereco">Endereço</string>
    <string name="Numero">Numero</string>
    <string name="Complemento">Complemento</string>
    <string name="Bairro">Bairro</string>
    <string name="Cidade">Cidade</string>
    <string name="Estado">Estado</string>
    <string name="Pais">Pais</string>
    <string name="Telefone">Telefone</string>
    <string name="Celular">Celular</string>
    <string name="Sexo">Sexo</string>
    <string name="Masculino">Masculino</string>
    <string name="Feminino">Feminino</string>
    <string name="NomeEmpresa">Nome da Empresa</string>
    <string name="NomeProprietario">Nome Proprietário</string>
    <string name="Agendar">Agendar</string>
    <string name="Avaliar">Avaliar</string>
    <string name="Avaliar2">Avaliar2</string>
    <string name="title_activity_maps">Map</string>
    <string name="Empresa">Empresa</string>
    <string name="Cliente">Cliente</string>
    <string name="Confirma">Confirmar Senha</string>
    <string name="FacaLogin">Faça o seu Login</string>
    <string name="FacaCadastro">Faça o seu Cadastro</string>
    <string name="Sair">Sair</string>
    <string name="CPF">CPF</string>
    <string name="CNPJ">CNPJ ou CPF</string>
    <string name="Salvar">Salvar</string>
    <string name="termosDeUso">Eu aceito os termos de uso</string>

    <string name="emailOuSenhaNaoPreenchido">Campo E-mail ou Senha não foi preenchido</string>
    <string name="senhasDiferentes">Senhas digitadas não são iguais</string>
    <string name="tituloErroCadastro">Erro ao efetuar cadastro</string>
    <string name="semPerfil">Nenhum perfil foi selecionado</string>
    <string name="semSexo">Nenhum sexo foi selecionado</string>

    <string name="senhaFraca">Digite uma senha mais forte</string>
    <string name="emailInvalido">E-mail digitado inválido</string>
    <string name="usuarioExixtente">Usuário já existente</string>
    <string name="erroEfetuarCadastro">Ao efetuar cadastro</string>
    <string name="sucessoCadastro">Sucesso ao cadastrar usuário</string>
    <string name="tituloErroLogin">Erro ao fazer Login</string>
    <string name="contaInexixtente">Conta inexistente ou desativada</string>
    <string name="senhaIncorreta">Senha incorreta</string>
    <string name="Proximo">Proximo</string>
    <string name="AceiteTermos">Você não aceitou os termos!</string>
    <string name="campoNaoPreenchido">Algum campo de dados pessoais não foi preenchido</string>
    <string name="Proprietario">Proprietario: </string>
    <string name="HoraInicial">Hora Inicial</string>
    <string name="HoraFinal">Hora Final</string>
    <string name="TempoAtendimento">Tempo de Atendimento</string>
    <string name="nenhumServicoSelecionado">Nenhum serviço foi selecionado</string>
    <string name="carregando">Aguarde, atualizando campos</string>
    <string name="ok">OK</string>
    <string name="voltar">Voltar</string>

    <string-array name="Servicos">
        <item>Pé e mão</item>
        <item>Massagem</item>
        <item>Bla</item>
        <item>Bla</item>
    </string-array>
</resources>
