<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="interdisciplinar.com.br.interandroid.fragment.DadosEnderecoClienteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/txtCEPEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CEP"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtEnderecoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Endereco"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtNumeroEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtComplementoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Complemento"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtBairroEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Bairro"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtCidadeEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Cidade"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEstadoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Estado"
            android:inputType="text"
            android:maxLength="2" />

        <EditText
            android:id="@+id/txtPaisEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Pais"
            android:inputType="text" />

        <Button
            android:id="@+id/btnCadastrarEmpresa"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cadastrar" />

    </LinearLayout>

</FrameLayout>
