<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="interdisciplinar.com.br.interandroid.fragment.DadosEnderecoClienteFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/txtCEPCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CEP"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Endereco"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Numero"
            android:inputType="number"
            android:maxLength="5" />

        <EditText
            android:id="@+id/txtComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Complemento"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Bairro"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Cidade"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Estado"
            android:inputType="text"
            android:maxLength="2" />

        <EditText
            android:id="@+id/txtPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Pais"
            android:inputType="text" />

        <Button
            android:id="@+id/btnCadastrarCliente"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Salvar" />

    </LinearLayout>
</ScrollView>
</FrameLayout>
