<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="interdisciplinar.com.br.interandroid.fragment.DadosPessoaisClienteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTituloApp"
        android:id="@+id/dadosEmpresa">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/txtNomeEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NomeEmpresa"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtNomeProprietarioEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NomeProprietario"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CNPJ"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtSenhaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtTelefoneEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefone"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtCelularEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Celular"
            android:inputType="number" />
    </LinearLayout>
</ScrollView>
    </LinearLayout>
</FrameLayout>
